<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_SerialBuffers" Id="{baca80ce-a208-42b3-b2b4-8a03c96bd8b9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	dNumOfSensors		: INT := 1;	
END_VAR
VAR_GLOBAL
	RxBufferEL			:  ComBuffer;	// Receive data buffer; used with all receive function blocks
	TxBufferEL			:  ComBuffer;	// Transmit data buffer; used with all receive function blocks
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>