<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="SerialComms_EL6021_ILD1420" Id="{16fc184f-810c-4eff-9dfe-508ee9d55ca4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SerialComms_EL6021_ILD1420
VAR
	(* background communication with the EL6021 terminal *)
	fbEL6021Ctrl		: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF SerialLineControl;
	bEL6021CtrlError	: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF BOOL;
	eEL6021CtrlErrorID	: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF ComError_t;
	(*
	I/O variables for a EL6021 terminal.
	Be sure to link both of the variables exposed by the EL6inData22B struct, the `Status` as
	well as it's `D` array. If only one is linked, the data transfer will not work.
	*)
	stIn_EL6021  AT %I*	: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF EL6inData22B;	// linked to the EL6021 in the TwinCAT System Manager
	stOut_EL6021 AT %Q*	: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF EL6outData22B;	// linked to the EL6021 in the TwinCAT System Manager
	clearComBuff 		: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF ClearComBuffer;
	nCounter 			: INT;
	resetcom			: ComReset;
	
	// debug
	Error				: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF BOOL;
	ErrorID			: ARRAY[0..GVL_SerialBuffers.dNumOfSensors-1] OF ComError_t;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
The SerialLineControl function block is supposed to be called in every PLC cycle.
It handles the communication between the ILD1420-100 and the EL6021 clamp for a single ILD-1420-100.
It communicates with the serial line hardware device and transmits or receives data.
The SerialLineControl can be called in the standard task (e.g.for PcCOM port usage) 
or in a separate fast task (e.g.for terminal usage) as well.
A fast separate task will be necessary at high baud rates or with KL6001 terminals 
which have a small process image (3 or 5 data bytes only)
*)
FOR nCounter := 0 TO GVL_SerialBuffers.dNumOfSensors-1 DO
	
	clearComBuff[nCounter](Buffer := GVL_SerialBuffers.RxBufferEL);	// resetcom
	clearComBuff[nCounter](Buffer := GVL_SerialBuffers.TxBufferEL);	// resetcom
	
	(* background communication with the EL6021 terminal *)
	fbEL6021Ctrl[nCounter](
		Mode:= SERIALLINEMODE_EL6_22B,
		pComIn:= ADR(stIn_EL6021[nCounter]),
		pComOut:= ADR(stOut_EL6021[nCounter]),
		SizeComIn:= SIZEOF(stIn_EL6021[nCounter]),
		Error=> Error[nCounter],
		ErrorID=> ErrorID[nCounter],
		TxBuffer:= GVL_SerialBuffers.TxBufferEL,
		RxBuffer:= GVL_SerialBuffers.RxBufferEL);
		
		
	IF fbEL6021Ctrl[nCounter].Error THEN
		bEL6021CtrlError[nCounter] := TRUE;
		eEL6021CtrlErrorID[nCounter] := fbEL6021Ctrl[nCounter].ErrorID;
	END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="SerialComms_EL6021_ILD1420">
      <LineId Id="485" Count="29" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>